--- a/Proyecto/WebApplication1/Site.Master
+++ b/Proyecto/WebApplication1/Site.Master
@@ -59,13 +59,13 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" runat="server" href="~/">Universidad de las Antillas</a>
+                    <a class="navbar-brand" runat="server" href="Index.aspx">Universidad de las Antillas</a>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li><a runat="server" href="~/">Inicio</a></li>
+                        <li><a href="Index.aspx">Inicio</a></li>
                         <li><a runat="server" href="~/About">Acerca de</a></li>
-                        <li><a href="Estudiante/Estudiante.aspx">Estudiante</a></li>
+                        <li><a runat="server" href="Estudiante/Estudiante.aspx">Estudiante</a></li>
 
 
                         
@@ -95,7 +95,7 @@
             </asp:ContentPlaceHolder>
             <hr />
             <footer>
-                <p>&copy; <%: DateTime.Now.Year %> - Mi aplicación ASP.NET</p>
+                <p>&copy; <%: DateTime.Now.Year %> Universidad de las Antillas</p>
             </footer>
         </div>
     </form>
