--- a/Proyecto/WebApplication1/Site.Master
+++ b/Proyecto/WebApplication1/Site.Master
@@ -65,6 +65,7 @@
                     <ul class="nav navbar-nav">
                         <li><a href="Index.aspx">Inicio</a></li>
                         <li><a runat="server" href="~/About">Acerca de</a></li>
+                        <li><a runat="server" href="Matricula/matricula.aspx">Matricula</a></li>
                         <li><a runat="server" href="Estudiante/Estudiante.aspx">Estudiante</a></li>
 
 
