--- a/Proyecto/WebApplication1/Site.Master
+++ b/Proyecto/WebApplication1/Site.Master
@@ -63,7 +63,7 @@
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li><a href="Index.aspx">Inicio</a></li>
+                        <li><a runat="server" href="Index.aspx">Inicio</a></li>
                         <li><a runat="server" href="~/About">Acerca de</a></li>
                         <li><a runat="server" href="Matricula/matricula.aspx">Matricula</a></li>
                         <li><a runat="server" href="Estudiante/Estudiante.aspx">Estudiante</a></li>
