--- a/Proyecto/WebApplication1/Site.Master
+++ b/Proyecto/WebApplication1/Site.Master
@@ -66,12 +66,12 @@
                         <li><a runat="server" href="Index.aspx">Inicio</a></li>
                         <li><a runat="server" href="~/About">Acerca de</a></li>
                         <li><a runat="server" href="Matricula/matricula.aspx">Matricula</a></li>
-                        <li><a runat="server" href="Estudiante/Estudiante.aspx">Estudiante</a></li>
+                        
                     </ul>
                     <asp:LoginView runat="server" ViewStateMode="Disabled">
                         <AnonymousTemplate>
                             <ul class="nav navbar-nav navbar-right">
-                                <li><a runat="server" href="~/Account/Register">Registrarse</a></li>
+                                <li><a runat="server" href="Estudiante/Estudiante.aspx" >Registrarse</a></li>
                                 <li><a href="login/login.aspx">Log in</a></li>
                             </ul>
                         </AnonymousTemplate>
