--- a/Proyecto/WebApplication1/Site.Master
+++ b/Proyecto/WebApplication1/Site.Master
@@ -27,12 +27,19 @@
         appInsights.trackPageView();
     </script>
     <script lang="JavaScript">
-        var session;
-        if (Session["user"] == "") {
+        var Session;
+        try {
+            if (Session["user"] == "") {
+                
+            } else {
+                label_numCarnet = "carnet" + Session["user"].tostring();
+            }
 
-        } else {
-            label_numCarnet = "carnet" + session["user"].tostring();
+        } catch (e) {
+            label_numCarnet = "no funcionó";
+
         }
+
 
     </script>
 </head>
@@ -81,8 +88,9 @@
                             <ul class="nav navbar-nav navbar-right">
                                 <li><a runat="server" href="Estudiante/Estudiante.aspx">Registrarse</a></li>
                                 <li><a runat="server" href="login/login.aspx">Log in</a></li>
-                                <li>
-                                    <label id="label_numCarnet"></label></li>
+                                <li><label id="label_numCarnet"></label></li>
+                                
+                                   
                             </ul>
                         </AnonymousTemplate>
                         <LoggedInTemplate>
