--- a/Proyecto/WebApplication1/Site.Master
+++ b/Proyecto/WebApplication1/Site.Master
@@ -27,18 +27,15 @@
         appInsights.trackPageView();
     </script>
     <script lang="JavaScript">
-        var Session;
-        try {
-            if (Session["user"] == "") {
-                
-            } else {
-                label_numCarnet = "carnet" + Session["user"].tostring();
-            }
-
-        } catch (e) {
-            label_numCarnet = "no funcionó";
-
+      
+        if (Session["user"] != null) {
+            $("ul").hide();
         }
+            
+
+      
+
+        
 
 
     </script>
@@ -83,9 +80,10 @@
                         <li><a runat="server" href="Matricula/matricula.aspx">Matricula</a></li>
 
                     </ul>
-                    <asp:LoginView runat="server" ViewStateMode="Enabled">
+                    <asp:LoginView  runat="server" ViewStateMode="Enabled">
                         <AnonymousTemplate>
-                            <ul class="nav navbar-nav navbar-right">
+                      
+                            <ul ID="logg" class="nav navbar-nav navbar-right">
                                 <li><a runat="server" href="Estudiante/Estudiante.aspx">Registrarse</a></li>
                                 <li><a runat="server" href="login/login.aspx">Log in</a></li>
                                 <li><label id="label_numCarnet"></label></li>
