--- a/Proyecto/WebApplication1/Site.Master
+++ b/Proyecto/WebApplication1/Site.Master
@@ -75,9 +75,9 @@
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li><a runat="server" href="Index.aspx">Inicio</a></li>
+                        <li><a runat="server" href="~/Index.aspx">Inicio</a></li>
                         <li><a runat="server" href="~/About">Acerca de</a></li>
-                        <li><a runat="server" href="Matricula/matricula.aspx">Matricula</a></li>
+                        <li><a runat="server" href="~/Cursos/matricula.aspx">Matricula</a></li>
 
                     </ul>
                     <asp:LoginView  runat="server" ViewStateMode="Enabled">
