--- a/Proyecto/WebApplication1/Content/bootstrap.css
+++ b/Proyecto/WebApplication1/Content/bootstrap.css
@@ -1409,7 +1409,8 @@ pre code {
 table {
   max-width: 100%;
   background-color: transparent;
-    margin-left: 30px;
+    margin-left: 28px;
+    margin-right: 0px;
 }
 
 th {
