--- a/Proyecto/WebApplication1/Site.Master
+++ b/Proyecto/WebApplication1/Site.Master
@@ -78,6 +78,9 @@
                         <li><a runat="server" href="~/Index.aspx">Inicio</a></li>
                         <li><a runat="server" href="~/About">Acerca de</a></li>
                         <li><a runat="server" href="~/Cursos/matricula.aspx">Matricula</a></li>
+                        <li><a runat="server" href="Plan_estudio/Plan_estudio.aspx">Plan de Estudio</a></li>
+                        <li><a runat="server" href="~/Index.aspx" >Expediente</a></li>
+                        <li><a runat="server" href="~/Index.aspx">Horario</a></li>
 
                     </ul>
                     <asp:LoginView runat="server" ViewStateMode="Enabled">
