--- a/Proyecto/WebApplication1/Site.Master
+++ b/Proyecto/WebApplication1/Site.Master
@@ -71,7 +71,9 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" runat="server" href="Index.aspx"> <img src="images/Universidad%20de%20las%20antillas%2050px.PNG" width="125" height="36" /> </a>
+                    <a class="navbar-brand" runat="server" href="Index.aspx">
+                        <img src="images/Universidad%20de%20las%20antillas%2050px.PNG" width="125" height="36" />
+                    </a>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
@@ -80,7 +82,7 @@
                         <li><a runat="server" href="~/Cursos/matricula.aspx">Matricula</a></li>
                         <li><a runat="server" href="Plan_estudio/Plan_estudio.aspx">Plan de Estudio</a></li>
                         <li><a runat="server" href="Cursos/Expediente.aspx">Expediente</a></li>
-                        <li><a runat="server" href="~/Index.aspx">Horario</a></li>
+                        <li><a runat="server" href="Perfil/Horarios.aspx">Horario</a></li>
 
                     </ul>
                     <asp:LoginView runat="server" ViewStateMode="Enabled">
