--- a/Proyecto/WebApplication1/Site.Master
+++ b/Proyecto/WebApplication1/Site.Master
@@ -77,12 +77,12 @@
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li><a runat="server" href="~/Index.aspx">Inicio</a></li>
-                        <li><a runat="server" href="~/About">Acerca de</a></li>
+                        <%--<li><a runat="server" href="~/Index.aspx">Inicio</a></li>--%>
                         <li><a runat="server" href="~/Cursos/matricula.aspx">Matricula</a></li>
                         <li><a runat="server" href="Plan_estudio/Plan_estudio.aspx">Plan de Estudio</a></li>
                         <li><a runat="server" href="Cursos/Expediente.aspx">Expediente</a></li>
                         <li><a runat="server" href="Perfil/Horarios.aspx">Horario</a></li>
+                        <li><a runat="server" href="~/About">Acerca de</a></li>
 
                     </ul>
                     <asp:LoginView runat="server" ViewStateMode="Enabled">
