--- a/Proyecto/WebApplication1/Site.Master
+++ b/Proyecto/WebApplication1/Site.Master
@@ -81,7 +81,7 @@
                         <li><a runat="server" href="~/Cursos/matricula.aspx">Matricula</a></li>
                         <li><a runat="server" href="Plan_estudio/Plan_estudio.aspx">Plan de Estudio</a></li>
                         <li><a runat="server" href="Cursos/Expediente.aspx">Expediente</a></li>
-                        <li><a runat="server" href="Perfil/horario.aspx">Perfil/horario.aspx</a></li>
+                        <li><a runat="server" href="Perfil/horario.aspx">Horario</a></li>
                         <li><a runat="server" href="~/About">Acerca de</a></li>
 
                     </ul>
