--- a/Proyecto/WebApplication1/Site.Master
+++ b/Proyecto/WebApplication1/Site.Master
@@ -78,6 +78,7 @@
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <%--<li><a runat="server" href="~/Index.aspx">Inicio</a></li>--%>
+                         <li><a runat="server" href="~/Perfil/Perfil.aspx">Perfil</a></li>
                         <li><a runat="server" href="~/Cursos/matricula.aspx">Matricula</a></li>
                         <li><a runat="server" href="Plan_estudio/Plan_estudio.aspx">Plan de Estudio</a></li>
                         <li><a runat="server" href="Cursos/Expediente.aspx">Expediente</a></li>
@@ -89,7 +90,7 @@
                         <AnonymousTemplate>
 
                             <ul id="logg" class="nav navbar-nav navbar-right">
-                                <li><a runat="server" href="Estudiante/Estudiante.aspx">Registrarse</a></li>
+                               
                                 <li><a runat="server" href="login/login.aspx">Log in</a></li>
                                 <li>
                                     <label id="label_numCarnet"></label>
